syntax = "proto3";

package proto;

import "common.proto";

option java_multiple_files = true;

option java_package = "com.bigkotik.transparentdatabridge";

option go_package = "github.com/Big-Kotik/transparent-data-bridge-api/bridge/api/v1";

service TransparentDataBridgeService {
  rpc SendChunks(stream File) returns (FileStatus);
}

// First message in the stream must be of SendFileRequest type
message File {
  oneof fileInfo {
    SendFileRequest request = 1;
    FileChunk chunk = 2;
  }
}
