syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "com.bigkotik.transparentdatabridge";

option go_package = "github.com/Big-Kotik/transparent-data-bridge-api/bridge/api/v1";

message SendFileRequest {
  string file_name = 1;
  int32 offset = 2;
  int32 destination = 3;
}

message FileChunk {
  bytes chunk = 1;
}

message FileStatus {
  int32 last_chunk_offset = 1;
}
